# dat480-final

./: .gitignore  Makefile  README.md
Basic_kernels/: Makefile
Ethernet/: Makefile
Notebooks/: vnx-basic.ipynb  vnx-benchmark-throughput.ipynb  vnx-project-split.ipynb
Project_kernels_HLS/: .gitignore  Makefile  README.md  krnl_proj.cfg
Project_kernels_HLS/src/: krnl_proj.cpp  krnl_proj.h  patterns_snort.h  patterns_snort_long.h  patterns_snort_short.h
Project_kernels_HLS/tb/: krnl_proj.h  tb_proj.cpp
Project_kernels_HLS_split/: Makefile  krnl_proj_split.cfg  vitis_hls_csim.tcl
Project_kernels_HLS_split/_x.xilinx_u55c_gen3x16_xdma_3_202210_1/: krnl_proj_split.xo
Project_kernels_HLS_split/krnl_proj_split_csim/: hls.app
Project_kernels_HLS_split/src/: krnl_proj_split.h
Project_kernels_RTL/: Makefile  kernel.xml  package.tcl
Project_resources/: MINI_pattern_match_snort3_content.txt
Stream_throughput_kernel/: Makefile  frontend.cfg  frontend.cpp  frontend.h  kernel.xml  package_kernel.tcl
config_files/: connectivity_benchmark_project_if0.ini  connectivity_project_if0.ini  connectivity_project_split_if0.ini
project_docs/: DCAM_introduction.md  Lab_requirements.md  MINI_pattern_match_snort3_content.txt  minimal_pattern.txt
project_split.intf0.xilinx_u55c_gen3x16_xdma_3_202210_1/: vnx_project_split_if0.xclbin.info  vnx_project_split_if0.xclbin.link_summary
project_split.intf0.xilinx_u55c_gen3x16_xdma_3_202210_1/link/sys_link/iprepo/xilinx_com_hls_krnl_proj_split_1_0/drivers/krnl_proj_split_v1_0/src/: CMakeLists.txt
(+4526 files in other folders)
